--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 /build/
 /generated/
 comp2021-*.jar
+gradle/**
+gradlew
+gradle.bat
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/intellij+all,java,gradle
